--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,22 @@
 # Title of your blog; shows in the header
-name: "yinxiaohan"
+name: "尹姑娘"
 
 # Description of your content (will only be used on Google Search)
-description: "Yin xiaohan Bolg"
+description: "尹姑娘 Blog"
 
 # Your name. Will show in your footer + sidebar
-author: "Sesmond"
+author: "尹姑娘"
 
 #url: "https://sesmond.github.io"
 baseurl: "/"
 encoding: UTF-8
 
 # A short presentation of yourself. Will show in the sidebar, under your name. Best usage would be between 30 to 50 words.
-author-bio: "I'm a dog. I develop things. This is my blog so why don't you close this damn side panel (cursed by most UX Designers but I don't care, I do whatever I want) and start reading my awesome stuff?"
+author-bio: 诗酒趁年华"
 
 # Social Accounts (mine, as placeholders)
 
-twitter: sesmond
+weibo: x2012feng
 github: sesmond
 dribbble: sesmond
 instagram: sesmond
