--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ baseurl: "/"
 encoding: UTF-8
 
 # A short presentation of yourself. Will show in the sidebar, under your name. Best usage would be between 30 to 50 words.
-author-bio: 诗酒趁年华"
+author-bio: 仗剑走天涯,诗酒趁年华
 
 # Social Accounts (mine, as placeholders)
 
