--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ author-bio: 仗剑走天涯,诗酒趁年华
 # Social Accounts (mine, as placeholders)
 
 weibo: x2012feng
-github: sesmond
-dribbble: sesmond
-instagram: sesmond
+#github: sesmond
+#dribbble: sesmond
+#instagram: sesmond
 
 # Google Analytics (you may want to changes these with yours or even delete :)
 
