--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author-bio: 仗剑走天涯,诗酒趁年华
 
 # Social Accounts (mine, as placeholders)
 
-weibo: x2012feng
+#weibo: x2012feng
 #github: sesmond
 #dribbble: sesmond
 #instagram: sesmond
