--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,22 @@
 # Title of your blog; shows in the header
-name: "尹姑娘"
+name: "东南汽车"
+#"尹姑娘"
 
 # Description of your content (will only be used on Google Search)
-description: "尹姑娘 Blog"
+description: "东南汽车测试"
 
 # Your name. Will show in your footer + sidebar
-author: "尹姑娘"
+author: "徐敏健"
 
 #url: "https://sesmond.github.io"
 baseurl: "/"
 encoding: UTF-8
 
 # A short presentation of yourself. Will show in the sidebar, under your name. Best usage would be between 30 to 50 words.
-author-bio: 仗剑走天涯,诗酒趁年华
+#author-bio: 仗剑走天涯,诗酒趁年华
 
 #short name comment
-duo_short_name : "yinxiaohan"
+#duo_short_name : "yinxiaohan"
 # Social Accounts (mine, as placeholders)
 
 #weibo: x2012feng
@@ -25,7 +26,7 @@ duo_short_name : "yinxiaohan"
 
 # Google Analytics (you may want to changes these with yours or even delete :)
 
-ga_domain: sesmond.github.io
+#ga_domain: sesmond.github.io
 # ga_tracking_id: UA-47727049-1
 
 # Other (refer to http://jekyllrb.com/docs/home/ for further details on the below)
