--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ encoding: UTF-8
 
 # Google Analytics (you may want to changes these with yours or even delete :)
 
-#ga_domain: sesmond.github.io
+ga_domain: sesmond.github.io
 # ga_tracking_id: UA-47727049-1
 
 # Other (refer to http://jekyllrb.com/docs/home/ for further details on the below)
