--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ encoding: UTF-8
 author-bio: 仗剑走天涯,诗酒趁年华
 
 #short name comment
-duo_short_name : "yinxiaohan"
+#duo_short_name : "yinxiaohan"
 # Social Accounts (mine, as placeholders)
 
 #weibo: x2012feng
